docs: Add documentation for Auth.ForgotPassword & Auth.ResetPassword
