# src/docs/swagger.json
@@ -12,6 +12,46 @@
     "host": "localhost:3000",
     "basePath": "/v1",
     "paths": {
+        "/auth/forgot-password": {
+            "post": {
+                "description": "An email will be sent to reset password.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Forgot password",
+                "parameters": [
+                    {
+                        "description": "Request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/validation.ForgotPassword"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/example.ForgotPasswordResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/example.NotFound"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/google": {
             "get": {
                 "description": "This route initiates the Google OAuth2 login flow. Please try this in your browser.",
@@ -180,6 +220,52 @@
                         "description": "Email already taken",
                         "schema": {
                             "$ref": "#/definitions/example.DuplicateEmail"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/reset-password": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Reset password",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "The reset password token",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "Request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/validation.UpdatePassOrVerify"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/example.ResetPasswordResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Password reset failed",
+                        "schema": {
+                            "$ref": "#/definitions/example.FailedResetPassword"
                         }
                     }
                 }
@@ -536,6 +622,23 @@
                 }
             }
         },
+        "example.FailedResetPassword": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 401
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Password reset failed"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "error"
+                }
+            }
+        },
         "example.Forbidden": {
             "type": "object",
             "properties": {
@@ -550,6 +653,23 @@
                 "status": {
                     "type": "string",
                     "example": "error"
+                }
+            }
+        },
+        "example.ForgotPasswordResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "message": {
+                    "type": "string",
+                    "example": "A password reset link has been sent to your email address."
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
                 }
             }
         },
@@ -765,6 +885,23 @@
                 }
             }
         },
+        "example.ResetPasswordResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Update password successfully"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "success"
+                }
+            }
+        },
         "example.TokenExpires": {
             "type": "object",
             "properties": {
@@ -887,6 +1024,19 @@
                 }
             }
         },
+        "validation.ForgotPassword": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "example": "fake@example.com"
+                }
+            }
+        },
         "validation.Login": {
             "type": "object",
             "required": [
@@ -925,6 +1075,17 @@
                     "maxLength": 50,
                     "example": "fake name"
                 },
+                "password": {
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 8,
+                    "example": "password1"
+                }
+            }
+        },
+        "validation.UpdatePassOrVerify": {
+            "type": "object",
+            "properties": {
                 "password": {
                     "type": "string",
                     "maxLength": 20,
